# kasparro-ai-agentic-content-generation-system-kalava-chandrakanth

./: .dockerignore  .gitignore  Dockerfile  README.md  REFACTOR_SUMMARY.md  app.py  index.html  pyproject.toml  requirements.txt  script.sh
.github/workflows/: docker-build.yml
data/: sample_product.json
data/inputs/: input_AquaShield_Niacinamide_Serum_20251209_123703.json  input_AquaShield_Niacinamide_Serum_20251209_123711.json  input_AquaShield_Niacinamide_Serum_20251209_123729.json  input_AquaShield_Niacinamide_Serum_20251209_123938.json  input_AquaShield_Niacinamide_Serum_20251209_123952.json  input_AquaShield_Niacinamide_Serum_20251209_124341.json  input_AquaShield_Niacinamide_Serum_20251209_124347.json  input_AquaShield_Niacinamide_Serum_20251209_124401.json  input_AquaShield_Niacinamide_Serum_20251209_124425.json  input_AquaShield_Niacinamide_Serum_20251209_133708.json  input_AquaShield_Niacinamide_Serum_20251209_133813.json  input_AquaShield_Niacinamide_Serum_20251209_133947.json  input_HydraGlow_Hyaluronic_Acid_Serum_20251209_133837.json  input_HydraGlow_Hyaluronic_Acid_Serum_20251209_133900.json  input_HydraGlow_Hyaluronic_Acid_Serum_20251209_133913.json  input_HydraGlow_Hyaluronic_Acid_Serum_20251209_133919.json  input_HydraGlow_Hyaluronic_Acid_Serum_20251209_133931.json  input_raw_input_20251209_134320.json  (+7 more)
docs/: projectdocumentation.md
src/: config.py  llm_client.py  main.py  orchestrator.py  output_comparison.json  output_description.json  output_description_comparison_faq.json  output_faq.json
tests/: test_models.py  test_workflow.py
(+60 files in other folders)
